examples/test/testpolicy8633.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8633
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key35: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value2
          key32: value16
          key41: value31
      podSelector:
        matchLabels:
          key10: value15
          key26: value17
